# mbed-targets

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DATA_VALIDATION.md  DEVELOPMENT.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.ci_scripts/: target_validation_report.py
.github/: ISSUE_TEMPLATE.md
azure-pipelines/: build-release.yml  consistency-report.yml  generate-target-database.yaml
ci_scripts/: __init__.py  assert_news.py  generate_docs.py  generate_news.py  get_config.py  publish_target_validation_report.py  pyproject.toml  requirements-sync-target-db.txt  requirements.txt  sync_board_database.py  sync_target_database.py  tag_and_release.py  target_validation_report.py  test_sync_board_db.py  test_sync_target_db.py
docs/: board.html  boards.html  env.html  exceptions.html  get_board.html  get_target.html  index.html  mbed_tools.html  target.html  third_party_IP_report.csv  third_party_IP_report.html  third_party_IP_report.txt
mbed_targets/: __init__.py  _version.py  board.py  boards.py  config.py  exceptions.py  get_board.py  get_build_attributes.py  get_target.py  mbed_target.py  mbed_target_build_attributes.py  mbed_targets.py  mbed_tools.py  target.py
news/: 1.major  2.bugfix  20200117.misc  20200206.doc  20200206.misc  2020020601.misc  2020020602.misc  2020020603.misc  2020020604.misc  20200207.misc  202002073.misc  20200211.misc  20200219.misc  2020021901.misc  20200220.feature  20200221.feature  20200221.misc  20200224.feature  20200224.misc  2020022403.misc  202002241.misc  202002242.bugfix  20200228.feature  20200228.misc  2020022802.misc  20200303.feature  20200303.misc  20200304.feature  2020030401.feature  2020030402.feature  20200305.bugfix  20200305.feature  20200305.misc  (+48 more)
(+56 files in other folders)
