[metadata]
license_file = LICENSE

[flake8]
exclude =
    .git,
    __pycache__,
    config,
    docs,
    news,
    dist
ignore =
    # H301: one import per line
    H301,
    # H306: imports not in alphabetical order
    H306,
per-file-ignores =
    # Top level init file improves user experience by short cutting imports,
    # this is not used in the package online by calling clients
    # F401: imported but unused
    mbed_targets/__init__.py:F401
max-line-length = 160

[tool:pytest]
addopts = --cov mbed_targets --cov-report html
junit_family = xunit2
