[metadata]
license_file = LICENSE

[mypy]
# flake8-mypy expects the two following for sensible formatting
show_column_numbers=True
show_error_context=False

# do not follow imports (except for ones found in typeshed)
follow_imports=skip

# since we're ignoring imports, writing .mypy_cache doesn't make any sense
cache_dir=/dev/null


ignore_missing_imports=False
disallow_untyped_calls=True
warn_return_any=True
strict_optional=True
warn_no_return=True
warn_redundant_casts=True
warn_unused_ignores=True
disallow_untyped_defs=True
check_untyped_defs=True

[flake8]
exclude =
    .git,
    __pycache__,
    config,
    docs,
    news,
    dist
ignore =
    # H301: one import per line
    H301,
    # H306: imports not in alphabetical order
    H306,
per-file-ignores =
    # Top level init file improves user experience by short cutting imports,
    # this is not used in the package online by calling clients
    # F401: imported but unused
    mbed_targets/__init__.py:F401
max-line-length = 160
docstring-convention=google

[tool:pytest]
addopts = --cov mbed_targets --cov-report xml:coverage/coverage.xml
junit_family = xunit2
